Updated ERA5 retriever plus GPT 4.1 model added

--- a/.gitignore
+++ b/.gitignore
@@ -26,11 +26,13 @@ logs/
 # Ignore specific files
 save.py
 files.py
+compare.sh
 project_structure.txt
 project_files_structure.txt
 transit.json
 directory_structure.txt
 pangaea_session_history.json
+speed_download_checker.py
 
 # Ignore temporary files
 tmp/figs/
