--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ matplotlib==3.10.0
 seaborn==0.13.2
 tabulate
 cartopy==0.24.1
-requests==2.32.3
+requests>=2.32.4
 beautifulsoup4==4.12.3
 pangaeapy==1.0.20
 tqdm==4.67.1
